# backendapprepo

./: README.md  pyproject.toml
djangobackend/: db.sqlite3
djangobackend/backendapp/: admin.py  filters.py  models.py  urls.py  views.py
djangobackend/backendapp/migrations/: 0001_initial.py
djangobackend/djangobackend/: settings.py  urls.py
djangobackend/templates/: base.html  detailview.html  index.html
